fix ui alignment

--- a/asset/css/carousel.css
+++ b/asset/css/carousel.css
@@ -14,14 +14,19 @@
 	margin-right: auto;
 }
 
+.siema-ui {
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .caret {
 	opacity: 0.5;
 	width: 5%;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin-top: auto;
-	margin-bottom: auto;
+	align-self: center;
 }
 
 .caret:hover {
@@ -29,12 +34,12 @@
 }
 
 .caret#left {
-	left: 20px;
+	margin-left: 20px;
 }
 
 .caret#right {
-	right: 20px;
 	transform: rotate(180deg);
+	margin-right: 20px;
 }
 
 #carousel-title {color: #FFF;
@@ -42,12 +47,5 @@
 	border: 3px solid;
 	padding: 20px;
 	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
+	align-self: center;
 }
